# Django_project

./: .env.template  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/mysite/: settings.py
mysite/shopapp/: forms.py  serializers.py  tests.py  urls.py  views.py
