[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Мурад Камылов <kamylov@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
django-debug-toolbar = "^4.1.0"
django-filter = "^23.2"
djangorestframework = "^3.14.0"
pillow = "^9.5.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
